// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RubyWord > Snapshots > should match snapshot for Thai word with RTGS 1`] = `
<span
  class=""
  title=""
>
  <ruby
    style="ruby-align: center; ruby-position: over;"
  >
    <span
      class=""
    >
      สวัสดี
    </span>
    <rt>
      sawatdi
    </rt>
  </ruby>
</span>
`;

exports[`RubyWord > Snapshots > should match snapshot for level 1 1`] = `
<span
  class=""
>
  <span>
    hello
  </span>
</span>
`;

exports[`RubyWord > Snapshots > should match snapshot for level 2 with transcription 1`] = `
<span
  class=""
  title=""
>
  <ruby
    style="ruby-align: center; ruby-position: over;"
  >
    <span
      class=""
    >
      hello
    </span>
    <rt>
      həˈloʊ
    </rt>
  </ruby>
</span>
`;
